# Public/documentation/openapi.yml
@@ -4,8 +4,6 @@ info:
   version: '1.0'
 
 servers:
-  - description: Main Server
-    url: http://adaspace.local
   - description: Local Server
     url: http://localhost:8080
 
@@ -36,13 +34,15 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                username:
                   type: string
-                email:
-                  type: string
-                  format: email
+                  minLength: 5
                 password:
                   type: string
+                  minLength: 5
+                name:
+                  type: string
+                  minLength: 1
       responses:
         '200':
           description: A user session
@@ -198,7 +198,7 @@ paths:
               properties:
                 content:
                   type: string
-                image:
+                media:
                   type: string
                   format: binary
       responses:
@@ -324,7 +324,7 @@ paths:
             type: string
             format: uuid
           required: true
-          description: ID of the post to request liking users of
+          description: ID of the post to request liking users
       responses:
         '200':
           description: A user json object
@@ -347,7 +347,7 @@ paths:
             type: string
             format: uuid
           required: true
-          description: ID of the user to request liked posts for.
+          description: ID of the user to request liked posts
       responses:
         '200':
           description: A list of posts
@@ -357,6 +357,42 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Post'
+                  
+  /reports/{post_id}:
+    get:
+      tags:
+          - Reports
+      summary: Get a post reports
+      parameters:
+          - in: path
+            name: post_id
+            schema:
+              type: string
+              format: uuid
+            required: true
+            description: ID of the post to request reports
+      responses:
+        '200':
+          description: A list of reports
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+    post:
+      tags:
+         - Reports
+      summary: Report the specified post
+      security:
+          - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
+              description: The reason of the report
                   
   /likes:
     post:
@@ -406,20 +442,19 @@ components:
           type: string
           format: uuid
           description: The user ID.
+        username:
+          type: string
+          description: The user username.
         name:
           type: string
           description: The user name.
-        email:
-          type: string
-          format: email
-          description: The user email.
         avatar:
           type: string
           description: The user avatar media path.
       required:
         - id
+        - username
         - name
-        - email
           
     Session:
       type: object
@@ -437,15 +472,18 @@ components:
           type: string
           format: uuid
           description: The post ID.
-        content:
+        text:
           type: string
-          description: The post content.
+          description: The post text.
         user_id:
           type: string
           format: uuid
           description: The post user ID.
-        # user:
-        #   $ref: '#/components/schemas/User'
+        user:
+           $ref: '#/components/schemas/User'
+        like_count:
+          type: integer
+          format: int32
         created_at:
           type: string
           format: date-time
@@ -456,7 +494,7 @@ components:
           description: The post update timestamp.
       required:
         - id
-        - content
+        - text
         - user_id
         - created_at
         
