# Sources/App/Model/Post.swift
@@ -8,8 +8,8 @@ final class Post: Model {
     @ID(key: .id)
     var id: UUID?
     
-    @Field(key: "content")
-    var content: String
+    @Field(key: "text")
+    var text: String
     
     @Field(key: "media")
     var media: String?
@@ -28,15 +28,15 @@ final class Post: Model {
     
     init() {}
     
-    init(content: String, media: String? = nil, userID: User.IDValue) {
-        self.content = content
+    init(text: String, media: String? = nil, userID: User.IDValue) {
+        self.text = text
         self.media = media
         self.likeCount = 0
         self.$user.id = userID
     }
     
     init(form: Form, userID: User.IDValue) {
-        self.content = form.content
+        self.text = form.text
         if let media = form.media {
             self.media = try? media.data.write(to: URL(fileURLWithPath: DirectoryConfiguration.detect().publicDirectory), contentType: media.contentType)
         }
@@ -45,7 +45,7 @@ final class Post: Model {
     }
     
     var `public`: Public {
-        Public(id: id!, content: content, media: media, likeCount: likeCount, createdAt: createdAt, updatedAt: updatedAt, userID: $user.id)
+        Public(id: id!, text: text, media: media, likeCount: likeCount, createdAt: createdAt, updatedAt: updatedAt, userID: $user.id, user: $user.value?.public)
     }
     
 }
@@ -55,18 +55,19 @@ extension Post: Content { }
 extension Post {
     
     struct Form: Content {
-        var content: String
+        var text: String
         var media: File?
     }
     
     struct Public: Content {
         var id: UUID
-        var content: String
+        var text: String
         var media: String?
         var likeCount: Int
         var createdAt: Date?
         var updatedAt: Date?
         var userID: UUID
+        var user: User.Public?
     }
 
 }
@@ -85,5 +86,54 @@ extension ByteBuffer {
         try file.write(to: url)
         return path
     }
+    
+}
+
+extension Post {
+    
+    final class Mock: Model {
+        
+        struct Input: Content {
+            let text: String
+            let media: File?
+            let createdAt: Date
+        }
+        
+        static let schema = "posts"
+        
+        @ID(key: .id)
+        var id: UUID?
+        
+        @Field(key: "text")
+        var text: String
+        
+        @Field(key: "media")
+        var media: String?
+        
+        @Field(key: "like_count")
+        var likeCount: Int
+        
+        @Parent(key: "user_id")
+        var user: User
+        
+        @Field(key: "created_at")
+        var createdAt: Date?
+        
+        init() {}
+        
+        init(text: String, media: String? = nil, userID: User.IDValue, createdAt: Date) {
+            self.text = text
+            self.media = media
+            self.createdAt = createdAt
+            self.likeCount = 0
+            self.$user.id = userID
+        }
+        
+        var `public`: Post.Public {
+            Post.Public(id: id!, text: text, media: media, likeCount: likeCount, createdAt: createdAt, updatedAt: nil, userID: $user.id)
+        }
+        
+    }
+    
     
 }
